[gd_scene load_steps=6 format=3]

[ext_resource type="FontFile" path="res://Fonts/ScoreFontSetScore.tres" id="1"]
[ext_resource type="Texture2D" uid="uid://hrehrqgjk1yk" path="res://Textures/Scorecard.png" id="2"]
[ext_resource type="Script" path="res://Scenes/Score.gd" id="3"]
[ext_resource type="FontFile" path="res://Fonts/teamNameFont.tres" id="4"]
[ext_resource type="FontFile" path="res://Fonts/ScoreFontPointScore.tres" id="5"]

[node name="Score" type="TextureRect"]
anchor_left = 0.025
anchor_top = 0.025
anchor_right = 1.0
anchor_bottom = 0.025
offset_right = -1561.0
offset_bottom = 108.0
texture = ExtResource( 2 )
script = ExtResource( 3 )

[node name="ScoreTeamAText" type="Label" parent="."]
offset_left = 108.0
offset_top = 6.0
offset_right = 252.0
offset_bottom = 50.0
custom_fonts/font = ExtResource( 4 )
text = "AUS"

[node name="ScoreTeamBText" type="Label" parent="."]
offset_left = 109.89
offset_top = 57.6568
offset_right = 253.89
offset_bottom = 101.657
custom_fonts/font = ExtResource( 4 )
text = "FRA"

[node name="ScoreTeamASetScore" type="Label" parent="."]
offset_left = 239.0
offset_top = 24.0
offset_right = 260.0
offset_bottom = 51.0
custom_colors/font_color = Color( 0.929688, 0.52349, 0.330475, 1 )
custom_fonts/font = ExtResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreTeamBSetScore" type="Label" parent="."]
offset_left = 239.0
offset_top = 75.5466
offset_right = 260.0
offset_bottom = 102.547
custom_colors/font_color = Color( 0.929688, 0.52349, 0.330475, 1 )
custom_fonts/font = ExtResource( 1 )
text = "0"

[node name="ScoreTeamAPointScore" type="Label" parent="."]
offset_left = 258.0
offset_top = 3.0
offset_right = 308.0
offset_bottom = 53.0
custom_fonts/font = ExtResource( 5 )
text = "13"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreTeamBPointScore" type="Label" parent="."]
offset_left = 258.0
offset_top = 55.0
offset_right = 308.0
offset_bottom = 105.0
custom_fonts/font = ExtResource( 5 )
text = "13"
align = 1
valign = 1
